--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,8 @@
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem; */
-
+  /* width: 100%;
+  height: 100%; */
   font-weight: normal;
 }
 
